<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/customer_op_tb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                />
            <Button
                android:id="@+id/customer_operational_view_button1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/profile_button"
                android:drawableRight="@drawable/icon_arrow_forward_ios_24"
                android:text="@string/shortcut"
                android:textColor="#000000" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/notice_listview_item"/>
                <TextView
                    android:id="@+id/cu_op_hid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/customer_operational_view_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/customer_center"
            android:layout_margin="2dp"
            />
        <Button
            android:id="@+id/customer_operational_view_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/operation_recommendation"
            android:layout_margin="2dp"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/customer_operational_listView_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            />
        <ListView
            android:id="@+id/customer_operational_listView_operation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            />
    </FrameLayout>

</LinearLayout>